# UFO-Engine-GL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_template.py  main_template.cpp
file/: file.cpp  file_menu.cpp  file_menu.h  file_menu_button.h
glad/include/glad/: glad.h
glad/src/: glad.c
json/: json.h  json_v.h  json_variant.cpp  json_variant.h
misc/: sdl_utils.cpp  sdl_utils.h  ufo_opengl.h
pixel_game_engine/: pge_graphics.h  pixel_game_engine.h  pixel_game_engine_input.h
random/: random_number_generator.cpp  random_number_generator.h
res/: Using OpenGL With SDL.desktop
shaders/: circle_fragment_shader.cs  custom_fragment_shader.cs  partial_sprite_fragment.cs  partial_sprite_vertex.cs  rectangle_fragment_shader.cs  sprite_transformation_fragment_shader.cs  sprite_transformation_vertex_shader.cs  text_fragment.cs  text_vertex.cs
shaders/test/: fragment_shader.cs  fragment_shader_for_texture.cs  vertex_shader_for_texture.cs
shapes/: circle.cpp  circle.h  pill.cpp  pill.h  polygon.h  raw_shape_base.cpp  raw_shape_base.h  ray2.cpp  ray2.h  ray3.h  rectangle.cpp  rectangle.h  shape.h  triangle.h  vector3.h
src/: Main.cpp  Main.h  _sdl_ttf.h  actor.cpp  actor.h  actor_reference.h  animation.h  camera.cpp  camera.h  colour.h  colour_circle.h  colour_rectangle.h  control_settings.cpp  control_settings.h  engine.cpp  engine.h  graphics.h  input.h  level.cpp  level.h  opengl_debug_output.h  openglv4_5_asset_manager.cpp  openglv4_5_asset_manager.h  post_processor.h  shader.cpp  shader.h  splash_screen.h  sprite.h  sprite_renderer.cpp  sprite_renderer.h  text_rendering.cpp  text_rendering.h  texture_2d.cpp  texture_2d.h
ufo_collision/: collision_data.h
ufo_maths/: cross_product.h  is_polygon_clockwise.cpp  is_polygon_clockwise.h  ufo_math_implementation.h  ufo_maths.cpp  ufo_maths.h  wrapi_test.h
utils/: file.cpp  opengl_utils.h  ufo_macros.h
